# RP2040-HAT-MINING-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  getting_started.md  rp2040_hat_lwip_c-patch.cmake  rp2040_hat_mining_c-patch.cmake  rp2040_hat_mining_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/duino_coin/: CMakeLists.txt  README.md  duino_coin.c
examples/duino_coin/ILI9340/: ILI9340.c  ILI9340.h
examples/minerMaster/: 20ok__minerMaster.cpp  CMakeLists.txt  merged_no_20_minerMaster.cpp  minerMaster.cpp
examples/minerMaster/ILI9340/: ILI9340.c  ILI9340.h  ILI9340_defines.h  ILI9340_font.c  ILI9340_font.h
examples/minerSlave/: CMakeLists.txt  minerSlave.cpp
examples/miner_W5100S-EVB-Pico/: CMakeLists.txt  README.md  miner_W5100S-EVB-Pico.c
libraries/: ._pico-sdk  CMakeLists.txt
patches/: 01_aws_iot_device_sdk_embedded_c_corehttp_network_interface.patch
port/: CMakeLists.txt  port_common.h
port/aws-iot-device-sdk-embedded-C/inc/: core_http_config.h  core_mqtt_config.h  dns_config.h  dns_interface.h  http_transport_interface.h  mqtt_transport_interface.h  ssl_transport_interface.h  timer_interface.h  util.h
port/aws-iot-device-sdk-embedded-C/src/: dns_interface.c  http_transport_interface.c  mqtt_transport_interface.c  ssl_transport_interface.c  timer_interface.c  util.c
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
port/lwip/inc/: lwipopts.h  tcp_client.h  w5x00_lwip.h
port/lwip/src/: tcp_client.c  w5x00_lwip.c
port/mbedtls/inc/: ssl_config.h
port/utils/inc/: Wire.h  charbuffer.h  duinoCoinUtils.h  hwSetupUtils.h
port/utils/src/: Wire.cpp  charbuffer.cpp  duinoCoinUtils.cpp  hwSetupUtils.c
